<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="com.github.meaninglesscode.todolistapp.util.GetDateStringFromMillisKt" />

        <variable
            name="viewmodel"
            type="com.github.meaninglesscode.todolistapp.todoitemmodify.ToDoItemModifyViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.meaninglesscode.todolistapp.ScrollChildSwipeRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:enabled="@{viewmodel.dataLoading}"
            app:refreshing="@{viewmodel.dataLoading}">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}">

                    <EditText
                        android:id="@+id/add_to_do_item_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/title_hint"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={viewmodel.title}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textStyle="bold"
                        android:autofillHints="to do item title" />

                    <EditText
                        android:id="@+id/add_to_do_item_content"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:background="@null"
                        android:gravity="top"
                        android:hint="@string/description_hint"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="text"
                        android:text="@={viewmodel.content}"
                        android:autofillHints="to do item content" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/add_to_do_item_due_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/time_picker_hint"
                        android:inputType="datetime"
                        android:text="@{GetDateStringFromMillisKt.getDateStringFromMillis(viewmodel.dueDate, GetDateStringFromMillisKt.DEFAULT_FORMAT)}"
                        android:autofillHints="to do item due date" />

                    <Button
                        android:id="@+id/clear_date_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/clear_date_button_text"
                        android:textSize="12sp" />

                </LinearLayout>
            </ScrollView>
        </com.github.meaninglesscode.todolistapp.ScrollChildSwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_save_to_do_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/ic_done_contentDescription"
            android:onClick="@{() -> viewmodel.saveToDoItem()}"
            android:src="@drawable/ic_done"
            app:fabSize="normal"
            app:layout_anchor="@id/refresh_layout"
            app:layout_anchorGravity="bottom|right|end" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
